# SlicerNeuroSegmentation

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE.txt  Meeting Minutes 2019-11-7.md  README.md  SlicerNeuroSegmentation.xcf
BIDSIO/: BIDSIO.py  CMakeLists.txt
BIDSIO/Resources/UI/: BIDSIO.ui
CurveComparison/: CMakeLists.txt  CurveComparison.py
CurveComparison/Resources/Icons/: CurveComparison.xcf
CurveComparison/Resources/UI/: CurveComparison.ui
Doc/: Feb2020minutes.md  MeetingMinutes.md
MarkupsSnap/: CMakeLists.txt  MarkupsSnap.py
MarkupsSnap/Resources/Icons/: MarkupsSnap.xcf
MarkupsSnap/Resources/UI/: MarkupsSnap.ui
Meetings/: Meeting Minutes 2019-10-10.md  Meeting Minutes 2020-02-19.md  Metting Minutes 2019-11-13.md
NeuroSegment/: CMakeLists.txt  NeuroSegment.py
NeuroSegment/Resources/Icons/: NeuroSegment.xcf
NeuroSegment/Resources/Segmentations/: DefaultSegmentation.seg.nrrd  SegmentationCategoryTypeModifier-GeneralSegmentation.json
NeuroSegment/Resources/UI/: NeuroSegment.ui  QuickSegment.ui  SegmentationPanel.ui  TerminologyPanel.ui
NeuroSegmentEffects/: CMakeLists.txt  SegmentEditorNeuroSegmentEffects.py
NeuroSegmentEffects/SegmentEditorNeuroSegmentEffectsLib/: MoveSegmentEditorEffect.py  __init__.py
NeuroSegmentParcellation/: CMakeLists.txt  NeuroSegmentParcellation.py
NeuroSegmentParcellation/NeuroSegmentParcellationLibs/: NeuroSegmentInputMarkupsFrame.py  NeuroSegmentInputMarkupsWidget.py  NeuroSegmentMarkupsIntersectionDisplayManager.py  NeuroSegmentOutputToolWidget.py  NeuroSegmentParcellationLogic.py  NeuroSegmentParcellationVisitor.py
NeuroSegmentParcellation/Resources/Icons/: NeuroSegmentParcellation.xcf
NeuroSegmentParcellation/Resources/Parcellation/: parcellation.qry
NeuroSegmentParcellation/Resources/UI/: NeuroSegmentInputMarkupsWidget.ui  NeuroSegmentOutputToolWidget.ui  NeuroSegmentParcellation.ui
NeuroVersionControl/: CMakeLists.txt  NeuroVersionControl.py
NeuroVersionControl/Resources/Icons/: Session.xcf
NeuroVersionControl/Resources/UI/: LoadSessionWidget.ui  NeuroVersionControl.ui  SaveSessionWidget.ui
SegmentationTimer/: SegmentationTimer.py
SegmentationTimer/Resources/UI/: SegmentationTimer.ui
SurfaceAverage/: CMakeLists.txt  SurfaceAverage.py
SurfaceAverage/Resources/Icons/: SurfaceAverage.xcf
SurfaceAverage/Resources/UI/: SurfaceAverage.ui
UserStatistics/: UserStatistics.py
UserStatistics/Resources/UI/: UserStatistics.ui
docs/: General Segmentation.md  NeuroParcellation.md  Welcome file.md
